--- a/style/constelaciones.css
+++ b/style/constelaciones.css
@@ -1,63 +1,68 @@
 body{
-    background-image: url(https://ichef.bbci.co.uk/news/640/cpsprodpb/FED1/production/_100933256_gettyimages-165964685.jpg);
+    background-image: url(https://www.renovablesverdes.com/wp-content/uploads/2020/05/Astronom%C3%ADa.jpg);
     background-repeat: no-repeat;
     background-size: 100%; ;
     background-position-x:center ;
     background-position-y:center ;
     background-attachment:fixed ;}
-table  ,th ,td {
-    /*border-color: ;*/
-    /*border-style: ;*/
-    /*border-width: ;*/
+
+    header{
+        color: crimson;
+    }
+
+    main{
+        text-align: center ;
+}
+
+    h3{
+        color:rgb(255, 32, 2);
+}
+
+
+
+table, th, td{
+    /* border-style:dashed;
+    border-width:2px;
+    border-color:brown ; */
     border: 1px solid red;
 }
 
-td{
-    color: rgb(0, 225, 255);
-}
-
-ul{
-    list-style-type: style type auto;/*quitar viñetas*/
-    margin: 0;/*espacio externo*/
-    padding: 0;/*espacio interno*/
-    overflow: hidden;/*texto flotante este en el cuadro*/
-}
-
-h3{
-    color: chartreuse;
-}
-
-h1{
-    color: darkturquoise;
+table{
+    width: 100%;
+    text-align: center;
+    border-collapse:collapse; /*borde simple*/
 }
 
 li{
-    float: left;
+    float: left;/*texto flotante*/
 }
+
 
 li a{
     display:block;
-    color: rgb(0, 243, 252);
+    color: rgb(255, 32, 2);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 li a:hover{
-    background-color: rgb(255, 81, 0);
+    background-color: rgb(231, 1, 252);
 }
 
+/*seudocodigo que cambia al pasar el mouse*/
 
-table{
-    width: 90%;
-    /*text-align: center;*/
-    border-collapse: collapse; /*borde simple*/
+li a:hover{
+    background-color: rgb(0, 0, 0);
+    color: rgb(253, 249, 2);
+}
+td{
+    height: 30px;
+    vertical-align: middle;    /*bottom=abajo, middle=centro, top=arriba*/
 }
 
 td img{
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 30%;
 }
 
 th{
@@ -66,21 +71,21 @@ th{
 }
 
 td{
-    height:30px;
-    vertical-align: middle; /*bottom (inf) , top (sup)*/
+    height: 30px;
+    vertical-align:top; /*bottom (inf), top (sup)*/
     padding: 15px;
 }
 
-/* th,td{ /*borde inferior
-    border-bottom:1px solid blue;
+/* th, td{ /*borde inferior
+    border-bottom: 1px solid blue;
 } */
 
-/* cambie de color
+/* Cambie de color
 tr:hover{
-    background-color:aqua;
+    background-color: aqua;
 } */
 
-color de cebra
+/* color de cebra */
 tr:nth-child(even){
-    background-color: aqua;
+    background-color: #f2f2f2;
 }
